--- a/relayer/.env.example
+++ b/relayer/.env.example
@@ -1,17 +1,17 @@
 # Relayer private key (with 0x prefix)
 RELAYER_PRIVATE_KEY=0x...
 
-# RPC URLs
+# RPC URLs for all 4 chains
 ARBITRUM_NOVA_RPC_URL=https://nova.arbitrum.io/rpc
 ARBITRUM_ONE_RPC_URL=https://arb1.arbitrum.io/rpc
+ETHEREUM_RPC_URL=https://eth.llamarpc.com
+GNOSIS_RPC_URL=https://rpc.gnosischain.com
 
-# Deployed bridge addresses
+# BridgeV2 contract addresses (deployed on each chain)
 BRIDGE_NOVA_ADDRESS=0x...
 BRIDGE_ONE_ADDRESS=0x...
-
-# MOON token addresses
-MOON_TOKEN_NOVA=0x0057Ac2d777797d31CD3f8f13bF5e927571D6Ad0
-MOON_TOKEN_ONE=0x0000000000000000000000000000000000000000
+BRIDGE_ETHEREUM_ADDRESS=0x...
+BRIDGE_GNOSIS_ADDRESS=0x...
 
 # Optional configuration
 POLL_INTERVAL_MS=5000
